fix dark mode text color

--- a/client/src/pages/ForgotPasswordPage/ForgotPasswordPage.module.css
+++ b/client/src/pages/ForgotPasswordPage/ForgotPasswordPage.module.css
@@ -29,6 +29,7 @@
   line-height: 125%;
   margin-bottom: 10px;
   text-align: center;
+  color: var(--primery-color-black);
 }
 
 .link {
